# rust_reprication

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: bus_groups_replaceinfo.csv  bus_groups_timeseries.csv  rust_data_clean.xlsx  rust_data_clean_correct.xlsx
notebooks/: 00_data_preparation.ipynb  10_table2a.ipynb  11_table2b.ipynb  20_state_mileage_migration_matrix.ipynb  table2a.ipynb
