[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
max-complexity = 20

[tool.nbqa.addopts]
flake8 = ["--max-line-length=120"]

[tool.poetry]
name = "rust-reprication"
version = "0.1.0"
description = ""
authors = ["Aoyagi816 <hiro8trees@yahoo.co.jp>"]
readme = "README.md"
packages = [{include = "rust_reprication"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
ipykernel = "^6.29.3"
openpyxl = "^3.1.2"

[tool.poetry.group.complexity.dependencies]
radon = "^6.0.1"
lizard = "^1.17.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.poetry.group.format.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
autoflake = "^2.2.1"
yapf = "^0.40.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
pyproject-flake8 = "^6.1.0"
mypy = "^1.7.1"
pylint = "^3.0.2"
pydocstyle = "^6.3.0"
ruff = "^0.1.8"
nbqa = "^1.7.1"

[tool.poetry.group.test.dependencies]
ipytest = "^0.13.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov --cov-report=term --cov-report=xml --cov-report=html"]

[tool.yamllint]
extends = "default"

[tool.yamllint.rules]
line-length = {max = 120}
